# virtual-sensor-temp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
advanced_virtual_sensor/: __init__.py  config.py
advanced_virtual_sensor/asset_similarity/: __init__.py
advanced_virtual_sensor/water_factor/: __init__.py
data/datasets/: baseline_1k.csv  baseline_1k.json  baseline_1k.md
data/featurised/: baseline_1k.csv
data/results/: results.csv
docs/: api_583_risk.md  asset_temperature.md  citations_audit.md  component_geometry_sizing.md  conditional_rules_sme_review.md  cycle_features.md  historical_weather_feature.md  pipeline_design.md  platform_draft_schema.sql  rules_provenance.md  synthetic_inputs_methodology.md  temperature_series_decisions_methodology.md
docs/temp/: citation_verification_llm_prompts.md  clarify_with_Angel.md  data_dictionary_updates.md  how_to_verify_citation_claims.md
lean_virtual_sensor/: config.py  config.yaml
lean_virtual_sensor/dataset/: __main__.py  configs.py  featurise.py  llm_scoring.py  pipeline.py
lean_virtual_sensor/feature_engineering/: age_features.py  asset_temperature.py  cycle_features.py  external_temperature.py  feature_pipeline.py  historical_weather_feature.py  system_flag_feature.py
lean_virtual_sensor/feature_engineering/api_583_risk/: _config.py  config.yaml  (+1 more)
lean_virtual_sensor/inputs_generation/: constraints.py  data_dictionary_lean_virtual_sensor_2026-06-14.csv  data_dictionary_lvs_2026-06-09.csv  generate.py  generate_features.py  generate_timeseries.py  generation_helpers.py  layer_generators.py  pipeline.py  schema_loader.py  temperature_series.py  temperature_series_driver.py
lean_virtual_sensor/modelling/: __main__.py  models.py  run.py  validations.py
lean_virtual_sensor/output/: adnoc_borouge_2.csv  adnoc_gas_processing_2.csv  ampol_lytton_refinery_brisbane.csv  aramco_haradh_train_1.csv  aramco_khurais.csv  aramco_mod2.csv  aramco_r93_jnglf.csv  aramco_riyas.csv  aramco_shedgum.csv  aramco_yanbu_2.csv  chevron_pasadena.csv  chevron_pascagoula.csv  chevron_richmond.csv  dangote_lekki_refinery.csv  dow_barry.csv  dow_boehlen.csv  dow_freeport.csv  dow_plaquemine.csv  dow_tarragona.csv  dow_terneuzen.csv  elng_idku_lng.csv  eni_brindisi.csv  equinor_hammerfest_lng_melkoya.csv  equinor_mongstad_refinery.csv  equinor_stavanger_hq.csv  imperial_oil_norman_wells_nwt.csv  ineos_grangemouth.csv  inpex_ichthys_lng_darwin.csv  kanoo_inventory_ksa.csv  kanoo_inventory_uae.csv  neste_porvoo_refinery.csv  nlng_bonny_island.csv  prci_houston.csv  preem_lysekil_refinery.csv  pttgc_rayong.csv  santos_glng_curtis_island.csv  sapref_durban_refinery.csv  sasol_secunda_synfuels.csv  seah_lcot.csv  seah_south_furious.csv  (+13 more)
scripts/: run_advanced_vs_pipeline.py
tests/: conftest.py  test_smoke.py
tests/test_dataset/: test_llm_scoring.py  test_pipeline.py
tests/test_feature_engineering/: test_age_features.py  test_asset_temperature.py  test_cycle_features.py  test_external_temperature.py  test_historical_weather_feature.py  test_system_flag_feature.py
tests/test_modelling/: test_models.py
virtual_sensor/: __init__.py
virtual_sensor/risk_calc/: __init__.py
(+38 files in other folders)
