[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "virtual-sensor"
version = "0.1.0"
description = "Deterministic virtual sensor pipeline (asset_similarity, water_factor, risk_calc)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "requests>=2.32",
    "scipy>=1.13",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29",
    "notebook>=7.4",
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lean_virtual_sensor*", "advanced_virtual_sensor*"]
exclude = ["data*", "docs*", "notebooks*", "output*", "reports*", "scripts*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "lean_virtual_sensor/inputs_generation", "tests/lean_virtual_sensor/inputs_generation"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100
src = [
    "virtual_sensor",
    "advanced_virtual_sensor",
    "lean_virtual_sensor",
    "scripts",
    "tests",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
